# Projet-Path-Tracing-M1CHPS

./: .gitignore  CMakeLists.txt  README.md
include/: BRDF.h  image.h  ray.h  scene.h  tools.h  vector.h
includes/: image.h  light.h  ray.h  scene.h  tools.h  vector.h
performance/: perf_bounces.sh  perf_samples.sh  plot_mpi_bounces.py  plot_mpi_samples.py  run.sh  run_24_32_bit.sh  run_arith_opti.sh  run_mpi_measure_apple.sh  run_perf.sh  run_sampling_conv.sh  runtime_measure_samplings.sh  setup_env.sh
performance/bounce_evolution/image/: 1 rebond.ppm
performance/bounce_evolution/images/: 0 rebonds.ppm
performance/bounce_evolution/scripts/: convergence.py
performance/bounce_evolution/trace/d1.trace/Trace0.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace10.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace11.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace12.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace13.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace14.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace15.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace16.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace17.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace18.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace4.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace5.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace6.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace7.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace8.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/Trace9.run/: RunIssues.storedata
performance/bounce_evolution/trace/d1.trace/corespace/: MANIFEST.plist
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/core-config/: exposedTableInfo.plist
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-0/: bulkstore  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-1/: bulkstore  bulkstore_descriptor  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-10/: bulkstore  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-13/: bulkstore  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-15/: bulkstore  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-16/: bulkstore  bulkstore_descriptor  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-19/: bulkstore  bulkstore_descriptor  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-2/: spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-26/: bulkstore  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-29/: bulkstore  bulkstore_descriptor  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/stores/indexed-store-31/: bulkstore  bulkstore_descriptor  spindex.0
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/table-manager/: tables.plist
performance/bounce_evolution/trace/d1.trace/corespace/run4/core/uniquing/: strings
performance/bounce_evolution/trace/d1.trace/corespace/run5/core/core-config/: exposedTableInfo.plist
performance/bounce_evolution/trace/d1.trace/corespace/run5/core/table-manager/: tables.plist
performance/bounce_evolution/trace/d1.trace/corespace/run5/core/uniquing/: strings
performance/bounce_evolution/trace/d1.trace/corespace/run6/core/core-config/: exposedTableInfo.plist
performance/bounce_evolution/trace/d1.trace/corespace/run6/core/table-manager/: tables.plist
performance/bounce_evolution/trace/d1.trace/corespace/run6/core/uniquing/: strings
performance/bounce_evolution/trace/d1.trace/symbols/stores/: 17D849C6-A785-3DBB-BFB5-8321706C4B8D.symbolsarchive  1E2FC910-E211-3A48-90C1-402C82129EA8.symbolsarchive  28239470-DB65-395C-9D8D-0834C665BA25.symbolsarchive  2EB73BF1-8C71-3E1F-A160-6DA83DC82606.symbolsarchive  36396B66-54EB-30FA-8E3B-E71AE63DA30C.symbolsarchive  5D31D65C-2ECF-36DA-84F5-BA4CAAB06ADB.symbolsarchive  6706BE80-9222-389B-BBC4-0DECA6FEE37F.symbolsarchive  7443A268-C9F9-3D65-B497-4F8081799514.symbolsarchive  77EADBA0-D246-3C33-BC13-C5C6B04B75C3.symbolsarchive  83BA9FD3-4E11-3C37-AF2F-34AFAA203301.symbolsarchive  9DAE12FA-D761-3362-AFAC-978D7020F202.symbolsarchive  ABFD3247-50AC-3C8E-B72A-83710166E982.symbolsarchive  E0C6C827-A8D1-3886-AAA2-51567B79AC29.symbolsarchive
performance/measures/: mpi_bounces.json  mpi_samples.json  runtime_by_samplings.csv  time_24 _WIDTH=500 HEIGHT=500 SAMPLES=200  time_24ptr _WIDTH=500 HEIGHT=500 SAMPLES=200  time_32 _WIDTH=500 HEIGHT=500 SAMPLES=200
performance/scripts/: convergence.py
reports/: demo_rotation.tex  main.tex  partie1.tex  rapport_PPN.tex
reports/.texpadtmp/: rapport_PPN.aux  rapport_PPN.out  rapport_PPN.toc
reports/include/: Biblio.tex  introduction.tex  matrix_rot.tex  pagedegarde.tex  performances.tex  raybox.tex  rendering.tex  schemas.tex  sphere.tex  tracing.tex
reports/rendering/: rendering.aux  rendering.lyx  rendering.tex
src/: BRDF.c  CMakeLists.txt  benchmarks.c  image.c  light.c  ppm.c  ray.c  scene.c  simd_functions.c  tools.c  tools.h  vector.c
src/BRDF/: BRDF.c  BRDF.h
src/Scene/: Scene.c  Scene.h
src/image/: image.c  image.h
src/ray/: ray.c  ray.h
src/scene/: scene.c  scene.h
src/tools/: light.h  tools.c  tools.h
src/vector/: vector.c  vector.h
test/: test_ray.c  test_runner.c  test_scene.c  test_tools.c  test_vector.c
(+85 files in other folders)
